--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 :root {
@@ -110,7 +111,7 @@ body {
 }
 
 .profiles {
-  width: 40%;
+  width: 50%;
   height: 40%;
   display: flex;
   justify-content: space-evenly;
