--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@ body {
   top: 0;
 }
 
-.progress-bar-container {
+/* .progress-bar-container {
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 1);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -74,7 +74,7 @@ body {
 
 label {
   color: white;
-}
+} */
 
 .info {
   position: fixed;
