--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
   top: 0;
 }
 
-/* .progress-bar-container {
+.progress-bar-container {
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -74,7 +74,7 @@ body {
 
 label {
   color: white;
-} */
+}
 
 .info {
   position: fixed;
