--- a/style.css
+++ b/style.css
@@ -53,6 +53,18 @@ body {
   top: 0;
 }
 
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 10px black;
+}
+
+::-webkit-scrollbar-thumb {
+  background: grey;
+}
+
 .progress-bar-container {
   height: 100%;
   width: 100%;
